--- a/orleans/FSharpHelloWorld/HelloWorld/HelloWorld.csproj
+++ b/orleans/FSharpHelloWorld/HelloWorld/HelloWorld.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Grains\Grains.fsproj" />
-    <ProjectReference Include="..\HelloWorldInterfaces\HelloWorldInterfaces.csproj" />
+    <ProjectReference Include="..\HelloWorldInterfaces\HelloWorldInterfaces.fsproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
